<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_degraded"
    tools:context=".Temas">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="137dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="5dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/btn_regresar"
            android:layout_width="14dp"
            android:layout_height="23dp"
            android:background="@drawable/vector192"
            android:padding="8dp" />

        <TextView
            android:id="@+id/txt_titulo"
            android:layout_width="360dp"
            android:layout_height="55dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/bienvenido"
            android:textColor="@color/light_text"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/txt_descripcion"
            android:layout_width="360dp"
            android:layout_height="55dp"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/elige_temas"
            android:textColor="@color/light_text"
            android:textSize="18sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/holo_purple"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="347dp">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="407dp"
            android:layout_gravity="center">

            <TableRow android:layout_marginTop="120dp">

                <Button
                    android:id="@+id/btn_deportes"
                    android:layout_width="145dp"
                    android:layout_height="145dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/botontemaselectable"
                    android:drawableTop="@drawable/balon"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/deportes"
                    android:textAllCaps="false"
                    android:textColor="@color/deep_gray"
                    android:textSize="15dp" />

                <Button
                    android:id="@+id/btn_animales"
                    android:layout_width="145dp"
                    android:layout_height="145dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/botontemaselectable"
                    android:drawableTop="@drawable/perro"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/animales"
                    android:textAllCaps="false"
                    android:textColor="@color/deep_gray"
                    android:textSize="15dp" />
            </TableRow>

            <TableRow android:layout_marginTop="15dp">

                <Button
                    android:id="@+id/btn_magia"
                    android:layout_width="145dp"
                    android:layout_height="145dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/botontemaselectable"
                    android:drawableTop="@drawable/magia"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/magia"
                    android:textAllCaps="false"
                    android:textColor="@color/deep_gray"
                    android:textSize="15dp" />

                <Button
                    android:id="@+id/btn_videojuegos"
                    android:layout_width="145dp"
                    android:layout_height="145dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/botontemaselectable"
                    android:drawableTop="@drawable/videojuego"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/videojuegos"
                    android:textAllCaps="false"
                    android:textColor="@color/deep_gray"
                    android:textSize="15dp" />
            </TableRow>

            <TableRow android:layout_marginTop="15dp">

                <Button
                    android:id="@+id/btn_musical"
                    android:layout_width="145dp"
                    android:layout_height="145dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/botontemaselectable"
                    android:drawableTop="@drawable/musical"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/musical"
                    android:textAllCaps="false"
                    android:textColor="@color/deep_gray"
                    android:textSize="15dp" />

                <Button
                    android:id="@+id/btn_aventuras"
                    android:layout_width="145dp"
                    android:layout_height="145dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/botontemaselectable"
                    android:drawableTop="@drawable/cohete"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/aventura"
                    android:textAllCaps="false"
                    android:textColor="@color/deep_gray"
                    android:textSize="15dp" />
            </TableRow>

        </TableLayout>
    </ScrollView>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_degraded">
    <Button
        android:id="@+id/btn_listo"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/round_button_green"
        android:text="Listo"
        app:backgroundTint="@null" />
</LinearLayout>
</LinearLayout>