<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_degraded"
    tools:context=".IniciarSesion">

    <ImageView android:id="@+id/imageView"
        android:layout_width="362dp"
        android:layout_marginTop="25dp"
        android:layout_height="228dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/logo"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="45dp" />

    <com.google.android.material.textfield.TextInputLayout

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="252dp"        android:layout_marginTop="25dp"
        android:layout_height="65dp" android:id="@+id/txti_usuario"
        android:hint="Usuario"   android:layout_gravity="center"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="284dp">

        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="249dp"
            android:layout_height="53dp"
            android:background="#FFFFFF"
            android:backgroundTint="#FFFFFF"         android:layout_gravity="center"
            android:inputType="textPersonName"
            android:textColor="#000000"
            android:textColorHighlight="#000000"
            android:textColorHint="#000000"
            android:textColorLink="#000000" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="255dp"
        android:layout_height="68dp" android:id="@+id/txi_contraseña"
        android:hint="Contraseña"         android:layout_gravity="center"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="349dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="249dp"
            android:layout_height="53dp"        android:layout_gravity="center"
            android:background="#FFFFFF"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_olvide_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:fontFamily="@font/nunito_light"
        android:text="@string/olvidaste_tu_contrasena"
        android:textColor="@color/yellow_light"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="417dp" />


    <CheckBox
        android:id="@+id/checkBox_recordatorio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"         android:layout_gravity="center"
        android:button="@android:drawable/checkbox_off_background"
        android:buttonTint="#DAD8D8"
        android:text="Recordar Usuario"
        android:textColor="#F6F6F6"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="210dp"         android:layout_gravity="center"
        android:layout_height="53dp"
        android:text=" ¿Olvidaste tu contraseña?"
        android:textColor="#FFD57F"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="417dp" />

    <Button
        android:id="@+id/btn_iniciar_sesion"
        android:layout_width="249dp"
        android:layout_height="68dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_button_green"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/iniciar_sesion"
        app:backgroundTint="@null"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="532dp" />

    <Button
        android:id="@+id/btn_registrarse"
        android:layout_width="249dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_button_purple"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="614dp"
        android:text="@string/registrarse"
        app:backgroundTint="@null"
        android:fontFamily="@font/nunito_bold"/>
</LinearLayout>